--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -13,7 +13,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:background="@drawable/wallpapers_a_00">
 
         <TextView
             android:layout_width="wrap_content"
@@ -21,7 +22,8 @@
             android:text="Sing Up"
             android:id="@+id/textView2"
             android:layout_gravity="center_horizontal"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            android:textColor="@color/foreground_material_dark" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -33,13 +35,15 @@
                 android:layout_height="wrap_content"
                 android:text="Name:"
                 android:id="@+id/textView3"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:textColor="@color/foreground_material_dark" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText"
-                android:layout_weight="2" />
+                android:layout_weight="2"
+                android:textColor="@color/foreground_material_dark" />
         </LinearLayout>
 
         <LinearLayout
@@ -52,13 +56,15 @@
                 android:layout_height="wrap_content"
                 android:text="User:"
                 android:id="@+id/textView4"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:textColor="@color/foreground_material_dark" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText2"
-                android:layout_weight="0.80" />
+                android:layout_weight="0.80"
+                android:textColor="@color/foreground_material_dark" />
         </LinearLayout>
 
         <LinearLayout
@@ -71,13 +77,15 @@
                 android:layout_height="wrap_content"
                 android:text="Password:"
                 android:id="@+id/textView5"
-                android:textSize="25dp" />
+                android:textSize="25dp"
+                android:textColor="@color/foreground_material_dark" />
 
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/editText3"
-                android:layout_weight="2.47" />
+                android:layout_weight="2.47"
+                android:textColor="@color/foreground_material_dark" />
 
         </LinearLayout>
 
